--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "nodemailer": "^7.0.4",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
